--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,26 +15,24 @@
         android:theme="@style/AppTheme.NoActionBar">
         <activity
             android:name=".Start"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".login.Login"
-            android:screenOrientation="portrait">
-        </activity>
-        <activity android:name=".login.Sign_up"></activity>
-        <activity android:name=".login.QrScan" android:screenOrientation="portrait"></activity>
-
-        <activity android:name=".transdep.DirectionView"></activity>
-        <activity android:name=".transdep.Passenger"></activity>
-
-
-        <activity android:name=".server.DBUpdate"></activity>
+            android:screenOrientation="portrait"></activity>
+        <activity android:name=".login.Sign_up" />
+        <activity
+            android:name=".login.QrScan"
+            android:screenOrientation="portrait" />
+        <activity android:name=".transdep.DirectionView" />
+        <activity android:name=".transdep.Passenger" />
+        <activity android:name=".server.DBUpdate" />
+        <activity android:name=".transdep.DirectionStart"></activity>
     </application>
 
 </manifest>
